--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "sass": "^1.60.0",
+    "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
